@@ -1,5 +1,7 @@
 Search API 1.x, dev (xxxx-xx-xx):
 ---------------------------------
+- #2923976 by Martijn Houtman, drunken monkey: Fixed facets with random sorting
+  on Database backend.
 - #2921582 by chr.fritsch, drunken monkey: Fixed saving of "database_text" form
   field for Database servers.
 - #2919884 by samuel.mortenson, borisson_, drunken monkey: Improved performance
